--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "devDependencies": {
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.2.1",
+     "eslint": "^3.17.0",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "eslint-plugin-html": "^2.0.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "cross-env": "^3.0.0"
